# forbidden-desert

./: .gitignore  docker-compose.yml  package-lock.json
.github/workflows/: game_logic_tests.yml  user_info_tests.yml
db/: init.sql
game_logic/: CMakeLists.txt  Dockerfile  conanfile.py
game_logic/src/: database.h  main.cpp
game_logic/src/handlers/: get_create.h  get_info.h  post_action.h
game_logic/src/helpers/: connection_pool.cpp  connection_pool.h  env_vars.cpp  env_vars.h  full_game.cpp  full_game.h  scope_guard.h  web_socket_manager.cpp  web_socket_manager.h
game_logic/src/logic/: action_validate.cpp  action_validate.h  do_action.cpp  do_action.h  do_action_exception.h  end_game.cpp  end_game.h
game_logic/src/logic/actions/: action_checks.cpp  action_checks.h  dig.cpp  dig.h  end_of_turn.cpp  end_of_turn.h  flip_over.cpp  flip_over.h  join.cpp  join.h  leave.cpp  leave.h  move.cpp  move.h  start.cpp  start.h
game_logic/src/middlewares/: auth.cpp  auth.h
game_logic/src/schemas/: game_action.cpp  game_action.h  game_info.cpp  game_info.h  game_state.cpp  game_state.h
game_logic/tests/: CMakeLists.txt  test_actions.cpp  test_middlewares.cpp
user_info/: auth.py  database.py  exceptions.py  main.py  requirements.txt  schemas.py
user_info/tests/: test_auth.py  test_change.py
vue_app/: Dockerfile  package-lock.json  package.json  vue.config.js
vue_app/src/: App.vue
